objects/HP_Quote_Order__c.object
<CustomObject>
    <fields>
        <fullName>HP_Order_Number_OSS__c</fullName>
        <formula>HYPERLINK(&quot;javascript:var obj = window.open(&apos;&quot;+$Label.OSS_URL+&quot;os=&quot;+ HP_Order_Number__c +&quot;&apos;)&quot;, HP_Order_Number__c  ,&quot;_top&quot;)</formula>
        <label>HP Order Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HP_Order_Number__c</fullName>
        <externalId>true</externalId>
        <label>HP Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>Quote__r.SFDC_Quote_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>HP_Quote__c</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Number__c</fullName>
        <label>Sales Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>HP Quote Order</label>
    <nameField>
        <displayFormat>OO-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HP Quote Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>